# LabeLite

./: README.md  pyproject.toml
labelite/: labelite.py
labelite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
labelite/libs/: canvas.py  colorDialog.py  combobox.py  constants.py  create_ml_io.py  hashableQListWidgetItem.py  labelDialog.py  labelFile.py  pascal_voc_io.py  resources.py  settings.py  shape.py  stringBundle.py  toolBar.py  ustr.py  utils.py  yolo_io.py  zoomWidget.py
