[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labelite"
version = "2.0.0"
description = "Debloated YOLO bounding-box annotation tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["PyQt5>=5.15", "lxml"]

[project.scripts]
labelite = "labelite.labelite:main"

[tool.setuptools.packages.find]
include = ["labelite", "labelite.*"]